# finance_prediction

./: .env.example  .gitignore  PLANS.md  README.md  STATUS.md  pyproject.toml  项目讨论.txt
backend/: __init__.py
backend/app/: cli.py  main.py
backend/app/api/: routes.py
backend/app/config/: settings.py
backend/app/data_sources/: __init__.py  connectors.py  probe.py  spike.py
backend/app/factors/: __init__.py  engine.py
backend/app/models/: schemas.py
backend/app/pipeline/: __init__.py  report_pipeline.py
backend/app/reports/: markdown.py  pdf.py
backend/app/research/: __init__.py  local_llm.py  prompts.py
backend/app/screening/: __init__.py  service.py
backend/app/storage/: mvp_schema.sql  repository.py  source_spike_schema.sql
backend/app/web/: index.html
configs/: china_etf_rotation.json  data_source_spike.json
docs/: data-source-validation-report.md  financial-agent-technical-design.md  professional-investment-team-prompts-v1.md  project-critical-path.md  server-command-runbook.md
frontend/: .env.example  index.html  package.json  vite.config.ts
frontend/src/: main.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: CandidateDetail.tsx  CandidateTable.tsx  ChatPanel.tsx
frontend/src/pages/: Dashboard.tsx
tests/: test_data_source_spike.py  test_reports.py  test_repository.py  test_screening_engine.py  test_web_dashboard.py
