[project]
name = "financial-research-agent"
version = "0.1.0"
description = "Local-first investment research agent MVP spike."
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "reportlab>=4.2.0",
]

[project.scripts]
fra-report = "backend.app.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
line-length = 100
target-version = "py311"
